// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertTSLintDisableCommentsForProject should replace tslint:disable comments with their ESLint equivalents in .ts files for the given project 1`] = `
"
      /* eslint-disable */
      eval('');
    "
`;

exports[`convertTSLintDisableCommentsForProject should replace tslint:disable comments with their ESLint equivalents in .ts files for the given project 2`] = `
"
      // eslint-disable-next-line
      eval('');
    "
`;

exports[`convertTSLintDisableCommentsForProject should replace tslint:disable comments with their ESLint equivalents in .ts files for the given project 3`] = `
"
      /* eslint-disable @typescript-eslint/quotes */
      eval('');
    "
`;
